manifests/apps/vikunja/vikunja/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja-deployment
  labels:
    app: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
        - name: vikunja
          image: vikunja-container-image
          securityContext:
            runAsUser: 1017
            runAsGroup: 1017
          ports:
            - containerPort: 3456
          resources:
            requests:
              memory: "1000Mi"
              cpu: "500m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
          volumeMounts:
            - name: vikunja-pvc
              mountPath: /app/vikunja/files
      volumes:
        - name: vikunja-pvc
          persistentVolumeClaim:
            claimName: vikunja-pvc
