manifests/apps/vikunja/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja-service
spec:
  ports:
    - port: 80
      targetPort: 3456
      protocol: TCP
  selector:
    app: vikunja
